--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ title = "Invest Taxi"
 comments = true
 commit = false
 favicon = "img/favicon.png"
-logo = "img/logo.png" 
+logo = "img/logo2.png" 
 rss = true
 description= "Invest Taxi"
 author = "Lubomur"
