--- a/data/general.yaml
+++ b/data/general.yaml
@@ -4,7 +4,7 @@ author: Lubomur
 social:
   - img: img/facebook.svg
     link: https://www.facebook.com/InvestTaxi-102935801850469/?ref=page_internal
-logo: img/logo.png
+logo: img/logo2.png
 menu:
   - name: Про Нас
     url: "#about"
